SONARPY-4534 Always populate package root list for legacy projects
Co-authored-by: Guillaume Dequenne <guillaume.dequenne@sonarsource.com>
GitOrigin-RevId: da7bb06c3a112773820e5f5edd297f1db1ebb97a